// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SummarySection > omits metric cards when playerMetrics has no data 1`] = `
<div>
  <section>
    <div
      class="cards"
    >
      <div
        class="podiumWrapper"
      >
        <div
          data-testid="podium"
        />
        <div
          data-testid="leaderboard"
        />
        <div
          data-testid="page-divider"
        />
      </div>
      <div
        class="card full progress"
      >
        <div
          data-testid="circular-progress"
        />
        <p
          align="left"
          class="body2 text"
        >
          Difficulty: 100%
        </p>
      </div>
      <div
        data-testid="rating-card"
      >
        <div
          data-testid="rating-can-rate"
        >
          false
        </div>
        <div
          data-testid="rating-stars"
        >
          unset
        </div>
        <div
          data-testid="rating-comment"
        />
        <button
          data-testid="rating-set-stars"
          type="button"
        >
          set-stars
        </button>
        <button
          data-testid="rating-set-comment"
          type="button"
        >
          set-comment
        </button>
      </div>
      <button
        class="card hostGameButton"
        disabled=""
        id="host-game-button"
        type="button"
      >
        <div
          class="content"
        >
          <h3
            class="title3"
          >
            Play again
          </h3>
          <p
            class="body2"
          >
            This quiz isn’t public yet. Ask the owner to make it public before hosting a live game.
          </p>
        </div>
      </button>
      <div
        class="card full details"
      >
        <div
          class="column"
        >
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gamepad icon"
              data-icon="gamepad"
              data-prefix="fas"
              role="img"
              viewBox="0 0 640 512"
            >
              <path
                d="M448 64c106 0 192 86 192 192S554 448 448 448l-256 0C86 448 0 362 0 256S86 64 192 64l256 0zM192 176c-13.3 0-24 10.7-24 24l0 32-32 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l32 0 0 32c0 13.3 10.7 24 24 24s24-10.7 24-24l0-32 32 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-32 0 0-32c0-13.3-10.7-24-24-24zm240 96a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm64-96a32 32 0 1 0 0 64 32 32 0 1 0 0-64z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Game Mode
            </p>
            <p
              align="right"
              class="body2"
            >
              Classic
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-user icon"
              data-icon="user"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Players
            </p>
            <p
              align="right"
              class="body2"
            >
              2
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-question icon"
              data-icon="circle-question"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Questions
            </p>
            <p
              align="right"
              class="body2"
            >
              2
            </p>
          </div>
        </div>
        <div
          class="separator"
        />
        <div
          class="column"
        >
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-user-tie icon"
              data-icon="user-tie"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M224 248a120 120 0 1 1 0-240 120 120 0 1 1 0 240zm-30.5 56l61 0c9.7 0 17.5 7.8 17.5 17.5 0 4.2-1.5 8.2-4.2 11.4l-27.4 32 31 115.1 .6 0 34.6-138.5c2.2-8.7 11.1-14 19.5-10.8 61.9 23.6 105.9 83.6 105.9 153.8 0 15.1-12.3 27.4-27.4 27.4L43.4 512c-15.1 0-27.4-12.3-27.4-27.4 0-70.2 44-130.2 105.9-153.8 8.4-3.2 17.3 2.1 19.5 10.8l34.6 138.5 .6 0 31-115.1-27.4-32c-2.7-3.2-4.2-7.2-4.2-11.4 0-9.7 7.8-17.5 17.5-17.5z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Host
            </p>
            <p
              align="right"
              class="body2"
            >
              <a
                data-discover="true"
                href="/users/host-1/profile"
              >
                FrostyBear
              </a>
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-calendar icon"
              data-icon="calendar"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M128 0C110.3 0 96 14.3 96 32l0 32-32 0C28.7 64 0 92.7 0 128l0 48 448 0 0-48c0-35.3-28.7-64-64-64l-32 0 0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32-128 0 0-32c0-17.7-14.3-32-32-32zM0 224L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-192-448 0z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Date
            </p>
            <p
              align="right"
              class="body2"
            >
              2025-01-01 12:00
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-clock icon"
              data-icon="clock"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Duration
            </p>
            <p
              align="right"
              class="body2"
            >
              dur:0
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SummarySection > renders Classic summary, uses getCorrectPercentage, shows fastest and longest streak 1`] = `
<div>
  <section>
    <div
      class="cards"
    >
      <div
        class="podiumWrapper"
      >
        <div
          data-testid="podium"
        />
        <div
          data-testid="leaderboard"
        />
        <div
          data-testid="page-divider"
        />
      </div>
      <div
        class="card full progress"
      >
        <div
          data-testid="circular-progress"
        />
        <p
          align="left"
          class="body2 text"
        >
          Difficulty: 70%
        </p>
      </div>
      <div
        data-testid="rating-card"
      >
        <div
          data-testid="rating-can-rate"
        >
          false
        </div>
        <div
          data-testid="rating-stars"
        >
          unset
        </div>
        <div
          data-testid="rating-comment"
        />
        <button
          data-testid="rating-set-stars"
          type="button"
        >
          set-stars
        </button>
        <button
          data-testid="rating-set-comment"
          type="button"
        >
          set-comment
        </button>
      </div>
      <button
        class="card hostGameButton"
        id="host-game-button"
        type="button"
      >
        <div
          class="content"
        >
          <h3
            class="title3"
          >
            Play again
          </h3>
          <p
            class="body2"
          >
            Start a new live game with this quiz and invite others to join.
          </p>
        </div>
        <div
          class="icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-play"
            data-icon="play"
            data-prefix="fas"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M91.2 36.9c-12.4-6.8-27.4-6.5-39.6 .7S32 57.9 32 72l0 368c0 14.1 7.5 27.2 19.6 34.4s27.2 7.5 39.6 .7l336-184c12.8-7 20.8-20.5 20.8-35.1s-8-28.1-20.8-35.1l-336-184z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
      <div
        class="card full details"
      >
        <div
          class="column"
        >
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gamepad icon"
              data-icon="gamepad"
              data-prefix="fas"
              role="img"
              viewBox="0 0 640 512"
            >
              <path
                d="M448 64c106 0 192 86 192 192S554 448 448 448l-256 0C86 448 0 362 0 256S86 64 192 64l256 0zM192 176c-13.3 0-24 10.7-24 24l0 32-32 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l32 0 0 32c0 13.3 10.7 24 24 24s24-10.7 24-24l0-32 32 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-32 0 0-32c0-13.3-10.7-24-24-24zm240 96a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm64-96a32 32 0 1 0 0 64 32 32 0 1 0 0-64z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Game Mode
            </p>
            <p
              align="right"
              class="body2"
            >
              Classic
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-user icon"
              data-icon="user"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Players
            </p>
            <p
              align="right"
              class="body2"
            >
              2
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-question icon"
              data-icon="circle-question"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Questions
            </p>
            <p
              align="right"
              class="body2"
            >
              2
            </p>
          </div>
        </div>
        <div
          class="separator"
        />
        <div
          class="column"
        >
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-user-tie icon"
              data-icon="user-tie"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M224 248a120 120 0 1 1 0-240 120 120 0 1 1 0 240zm-30.5 56l61 0c9.7 0 17.5 7.8 17.5 17.5 0 4.2-1.5 8.2-4.2 11.4l-27.4 32 31 115.1 .6 0 34.6-138.5c2.2-8.7 11.1-14 19.5-10.8 61.9 23.6 105.9 83.6 105.9 153.8 0 15.1-12.3 27.4-27.4 27.4L43.4 512c-15.1 0-27.4-12.3-27.4-27.4 0-70.2 44-130.2 105.9-153.8 8.4-3.2 17.3 2.1 19.5 10.8l34.6 138.5 .6 0 31-115.1-27.4-32c-2.7-3.2-4.2-7.2-4.2-11.4 0-9.7 7.8-17.5 17.5-17.5z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Host
            </p>
            <p
              align="right"
              class="body2"
            >
              <a
                data-discover="true"
                href="/users/host-1/profile"
              >
                FrostyBear
              </a>
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-calendar icon"
              data-icon="calendar"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M128 0C110.3 0 96 14.3 96 32l0 32-32 0C28.7 64 0 92.7 0 128l0 48 448 0 0-48c0-35.3-28.7-64-64-64l-32 0 0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32-128 0 0-32c0-17.7-14.3-32-32-32zM0 224L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-192-448 0z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Date
            </p>
            <p
              align="right"
              class="body2"
            >
              2025-01-01 12:00
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-clock icon"
              data-icon="clock"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Duration
            </p>
            <p
              align="right"
              class="body2"
            >
              dur:123
            </p>
          </div>
        </div>
      </div>
      <div
        class="card metric"
      >
        <p
          class="body2"
        >
          Fastest Overall Player
        </p>
        <h3
          class="title3"
        >
          sec:3.2
        </h3>
        <div
          class="nicknames"
        >
          <div>
            Alice
          </div>
        </div>
      </div>
      <div
        class="card metric"
      >
        <p
          class="body2"
        >
          Longest Correct Streak
        </p>
        <h3
          class="title3"
        >
          7
        </h3>
        <div
          class="nicknames"
        >
          <div>
            Bob
          </div>
        </div>
      </div>
      <div
        class="card metric"
      >
        <p
          class="body2"
        >
          Most Accurate Player
        </p>
        <h3
          class="title3"
        >
          NaN%
        </h3>
        <div
          class="nicknames"
        />
      </div>
      <div
        class="card metric"
      >
        <p
          class="body2"
        >
          Biggest Comeback
        </p>
        <h3
          class="title3"
        >
          NaN
        </h3>
        <div
          class="nicknames"
        />
      </div>
    </div>
  </section>
</div>
`;

exports[`SummarySection > renders ZeroToOneHundred summary and uses getAveragePrecision 1`] = `
<div>
  <section>
    <div
      class="cards"
    >
      <div
        class="podiumWrapper"
      >
        <div
          data-testid="podium"
        />
        <div
          data-testid="leaderboard"
        />
        <div
          data-testid="page-divider"
        />
      </div>
      <div
        class="card full progress"
      >
        <div
          data-testid="circular-progress"
        />
        <p
          align="left"
          class="body2 text"
        >
          Difficulty: 50%
        </p>
      </div>
      <div
        data-testid="rating-card"
      >
        <div
          data-testid="rating-can-rate"
        >
          false
        </div>
        <div
          data-testid="rating-stars"
        >
          unset
        </div>
        <div
          data-testid="rating-comment"
        />
        <button
          data-testid="rating-set-stars"
          type="button"
        >
          set-stars
        </button>
        <button
          data-testid="rating-set-comment"
          type="button"
        >
          set-comment
        </button>
      </div>
      <button
        class="card hostGameButton"
        disabled=""
        id="host-game-button"
        type="button"
      >
        <div
          class="content"
        >
          <h3
            class="title3"
          >
            Play again
          </h3>
          <p
            class="body2"
          >
            This quiz isn’t public yet. Ask the owner to make it public before hosting a live game.
          </p>
        </div>
      </button>
      <div
        class="card full details"
      >
        <div
          class="column"
        >
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gamepad icon"
              data-icon="gamepad"
              data-prefix="fas"
              role="img"
              viewBox="0 0 640 512"
            >
              <path
                d="M448 64c106 0 192 86 192 192S554 448 448 448l-256 0C86 448 0 362 0 256S86 64 192 64l256 0zM192 176c-13.3 0-24 10.7-24 24l0 32-32 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l32 0 0 32c0 13.3 10.7 24 24 24s24-10.7 24-24l0-32 32 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-32 0 0-32c0-13.3-10.7-24-24-24zm240 96a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm64-96a32 32 0 1 0 0 64 32 32 0 1 0 0-64z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Game Mode
            </p>
            <p
              align="right"
              class="body2"
            >
              0 to 100
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-user icon"
              data-icon="user"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Players
            </p>
            <p
              align="right"
              class="body2"
            >
              2
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-circle-question icon"
              data-icon="circle-question"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Questions
            </p>
            <p
              align="right"
              class="body2"
            >
              2
            </p>
          </div>
        </div>
        <div
          class="separator"
        />
        <div
          class="column"
        >
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-user-tie icon"
              data-icon="user-tie"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M224 248a120 120 0 1 1 0-240 120 120 0 1 1 0 240zm-30.5 56l61 0c9.7 0 17.5 7.8 17.5 17.5 0 4.2-1.5 8.2-4.2 11.4l-27.4 32 31 115.1 .6 0 34.6-138.5c2.2-8.7 11.1-14 19.5-10.8 61.9 23.6 105.9 83.6 105.9 153.8 0 15.1-12.3 27.4-27.4 27.4L43.4 512c-15.1 0-27.4-12.3-27.4-27.4 0-70.2 44-130.2 105.9-153.8 8.4-3.2 17.3 2.1 19.5 10.8l34.6 138.5 .6 0 31-115.1-27.4-32c-2.7-3.2-4.2-7.2-4.2-11.4 0-9.7 7.8-17.5 17.5-17.5z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Host
            </p>
            <p
              align="right"
              class="body2"
            >
              <a
                data-discover="true"
                href="/users/host-1/profile"
              >
                FrostyBear
              </a>
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-calendar icon"
              data-icon="calendar"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M128 0C110.3 0 96 14.3 96 32l0 32-32 0C28.7 64 0 92.7 0 128l0 48 448 0 0-48c0-35.3-28.7-64-64-64l-32 0 0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32-128 0 0-32c0-17.7-14.3-32-32-32zM0 224L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-192-448 0z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Date
            </p>
            <p
              align="right"
              class="body2"
            >
              2025-01-01 12:00
            </p>
          </div>
          <div
            class="item"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-clock icon"
              data-icon="clock"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 0a256 256 0 1 1 0 512 256 256 0 1 1 0-512zM232 120l0 136c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2 280 120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"
                fill="currentColor"
              />
            </svg>
            <p
              align="left"
              class="body2"
            >
              Duration
            </p>
            <p
              align="right"
              class="body2"
            >
              dur:45
            </p>
          </div>
        </div>
      </div>
      <div
        class="card metric"
      >
        <p
          class="body2"
        >
          Fastest Overall Player
        </p>
        <h3
          class="title3"
        >
          sec:2.1
        </h3>
        <div
          class="nicknames"
        >
          <div>
            Carol
          </div>
        </div>
      </div>
      <div
        class="card metric"
      >
        <p
          class="body2"
        >
          Longest Correct Streak
        </p>
        <h3
          class="title3"
        >
          3
        </h3>
        <div
          class="nicknames"
        >
          <div>
            Dave
          </div>
        </div>
      </div>
      <div
        class="card metric"
      >
        <p
          class="body2"
        >
          Precision Champion
        </p>
        <h3
          class="title3"
        >
          NaN%
        </h3>
        <div
          class="nicknames"
        />
      </div>
      <div
        class="card metric"
      >
        <p
          class="body2"
        >
          Biggest Comeback
        </p>
        <h3
          class="title3"
        >
          NaN
        </h3>
        <div
          class="nicknames"
        />
      </div>
    </div>
  </section>
</div>
`;
